# agents-platform

./: index.html  next.config.js  package.json  tailwind.config.ts
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: a2a.py  agents.py  health.py  mcp.py
backend/app/core/: config.py  logging.py
backend/app/models/: agent.py
backend/app/services/a2a/: protocol.py
backend/app/services/agent_generator/: generator.py
backend/app/services/deployment/: foundry.py
backend/app/services/evaluation/: evaluator.py
backend/app/services/guardrails/: safety.py
backend/app/services/mcp/: server.py
backend/app/services/memory/: cosmos.py
backend/tests/: test_generate.py
components/magicui/: animated-grid.tsx  border-beam.tsx  dot-pattern.tsx  marquee.tsx  meteors.tsx  number-ticker.tsx  particles.tsx  spotlight.tsx  typing-animation.tsx
components/sections/: cta.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  logo-cloud.tsx  navbar.tsx  pricing.tsx  stats.tsx  testimonials.tsx
components/ui/: badge.tsx  button.tsx  card.tsx
